upgraded bootstrap and and reagent, and added nav menu